# serializer version: 1
# name: test_compile_aligner_no_bash
  '''
  ---
  description: Precision Aligner. Makes targeted code changes.
  mode: subagent
  model: github-copilot/gpt-5.2-codex
  temperature: 0.1
  tools:
    "read": true
    "glob": true
    "grep": true
    "write": true
    "edit": true
  permission:
    "edit": allow
    "write": allow
  ---
  
  # Aligner
  '''
# ---
# name: test_compile_all_fixtures
  dict({
    'aligner.md': '''
      ---
      description: Precision Aligner. Makes targeted code changes.
      mode: subagent
      model: github-copilot/gpt-5.2-codex
      temperature: 0.1
      tools:
        "read": true
        "glob": true
        "grep": true
        "write": true
        "edit": true
      permission:
        "edit": allow
        "write": allow
      ---
      
      # Aligner
      
      Makes targeted code changes to align implementations.
  
    ''',
    'explorer.md': '''
      ---
      description: Code Explorer. Reads and analyzes source code.
      mode: subagent
      model: github-copilot/claude-opus-4.6
      temperature: 0.05
      skills:
        - repomix-explorer
      tools:
        "read": true
        "glob": true
        "grep": true
        "write": true
        "webfetch": true
        "context7": true
        "bash": true
      permission:
        "bash":
          "*": deny
          "npx repomix@latest*": allow
          "bunx repomix@latest*": allow
        "write": allow
      ---
      
      # Explorer
      
      Read-only code exploration agent. Traces execution paths and produces reports.
  
    ''',
    'orchestrator.md': '''
      ---
      description: Orchestrator. Coordinates sub-agents.
      mode: primary
      model: github-copilot/claude-opus-4.6
      temperature: 0.2
      tools:
        "read": true
        "glob": true
        "grep": true
        "write": true
        "bash": true
        "task": true
      permission:
        "bash":
          "*": deny
          "ls*": allow
          "cat*": allow
          "git status*": allow
        "task":
          "*": deny
          "explorer": allow
          "aligner": allow
        "write": allow
        "question": allow
      ---
      
      # Orchestrator
      
      Coordinates exploration and alignment sub-agents.
  
    ''',
  })
# ---
# name: test_compile_explorer
  '''
  ---
  description: Code Explorer. Reads and analyzes source code.
  mode: subagent
  model: github-copilot/claude-opus-4.6
  temperature: 0.05
  skills:
    - repomix-explorer
  tools:
    "read": true
    "glob": true
    "grep": true
    "write": true
    "webfetch": true
    "context7": true
    "bash": true
  permission:
    "bash":
      "*": deny
      "npx repomix@latest*": allow
      "bunx repomix@latest*": allow
    "write": allow
  ---
  
  # Explorer
  
  Read-only code exploration agent.
  '''
# ---
# name: test_compile_orchestrator_with_delegates
  '''
  ---
  description: Orchestrator. Coordinates sub-agents.
  mode: primary
  model: github-copilot/claude-opus-4.6
  temperature: 0.2
  tools:
    "read": true
    "glob": true
    "grep": true
    "write": true
    "bash": true
    "task": true
  permission:
    "bash":
      "*": deny
      "ls*": allow
      "cat*": allow
      "git status*": allow
    "task":
      "*": deny
      "explorer": allow
      "aligner": allow
    "write": allow
    "question": allow
  ---
  
  # Orchestrator
  '''
# ---
# name: test_temperature_default_primary
  '''
  ---
  description: Test
  mode: primary
  model: github-copilot/claude-opus-4.6
  temperature: 0.2
  permission:
    "question": allow
  ---
  '''
# ---
# name: test_temperature_default_subagent
  '''
  ---
  description: Test
  mode: subagent
  model: github-copilot/gpt-5.2-codex
  temperature: 0.1
  ---
  '''
# ---
